# SPMbot

./: CLAUDE.md
kali-agent/: .env.example  .mcp.json  README.md  daemon.py  install.sh  kali-agent.service  pyproject.toml  requirements.txt
kali-agent/.claude/: settings.local.json
kali-agent/.roo/commands/: generate-skill.md  sequential-feynman.md
kali-agent/agent/: conditions.py  config.py  context.py  context_manager.py  guardrails.py  inference.py  llm.py  loop.py  prompts.py
kali-agent/bot/: commands.py  formatters.py  telegram.py
kali-agent/coding-agent-docs/claude-code-docs/: docs.claude.com_en_docs_claude-code_amazon-bedrock.json  docs.claude.com_en_docs_claude-code_analytics.json  docs.claude.com_en_docs_claude-code_checkpointing.json  docs.claude.com_en_docs_claude-code_claude-code-on-the-web.json  docs.claude.com_en_docs_claude-code_claude-code-on-the-web.md.json  docs.claude.com_en_docs_claude-code_claude.ai_settings_data-privacy-controls.json  docs.claude.com_en_docs_claude-code_cli-reference.json  (+43 more)
kali-agent/config/: settings.yaml  skills.yaml
kali-agent/kali_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kali-agent/skills/: base.py  finding_extractor.py  gobuster_enum.py  nmap_scan.py  nuclei_scan.py  output_parser.py  registry.py  web_recon.py  yaml_loader.py
kali-agent/store/: sqlite.py
kali-agent/tasks/: manager.py  models.py
kali-agent/tests/: __init__.py  conftest.py  test_config.py  test_context_manager.py  test_guardrails.py  test_integration.py  test_output_parser.py  test_store_findings.py
rules/: rules.md
(+125 files in other folders)
